Improvements suggested by @juan131

--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     app: "{{ template "name" . }}"
     chart: {{ template "mariadb.chart" . }}
-    release: {{ .Release.Name | secret }}
-    heritage: {{ .Release.Service | secret }}
+    release: {{ .Release.Name | quote }}
+    heritage: {{ .Release.Service | quote }}
 type: Opaque
 data:
   {{- if .Values.root.password }}
