Improve image chart naming

--- a/incubator/mariadb-cluster/templates/slave-statefulset.yaml
+++ b/incubator/mariadb-cluster/templates/slave-statefulset.yaml
@@ -47,7 +47,7 @@ spec:
       {{- end }}
       containers:
       - name: "mariadb"
-        image: "{{ .Values.image }}"
+        image: {{ template "mariadb.image" . }}
         imagePullPolicy: "{{ .Values.pullPolicy }}"
         env:
         - name: MARIADB_ROOT_PASSWORD
