Fix notes and metadata

--- a/incubator/mariadb-cluster/templates/slave-svc.yaml
+++ b/incubator/mariadb-cluster/templates/slave-svc.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: "{{ template "name" . }}"
     chart: {{ template "mariadb.chart" . }}
+    component: "slave"
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
 {{- if .Values.metrics.enabled }}
