--- a/incubator/mariadb-cluster/templates/master-deploy.yaml
+++ b/incubator/mariadb-cluster/templates/master-deploy.yaml
@@ -114,7 +114,7 @@ spec:
 {{- end }}
 {{- if .Values.metrics.enabled }}
       - name: metrics
-        image: "{{ .Values.metrics.image.repository }}:{{ .Values.metrics.image.tag }}"
+        image: {{ template "metrics.image" . }}
         imagePullPolicy: {{ .Values.metrics.image.pullPolicy | quote }}
         env:
         - name: MARIADB_ROOT_PASSWORD
