--- a/incubator/mariadb-cluster/templates/slave-statefulset.yaml
+++ b/incubator/mariadb-cluster/templates/slave-statefulset.yaml
@@ -45,6 +45,12 @@ spec:
                   app: "{{ template "name" . }}"
                   release: "{{ .Release.Name }}"
       {{- end }}
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+      {{- end}}
+      {{- end }}
       containers:
       - name: "mariadb"
         image: {{ template "mariadb.image" . }}
