--- a/incubator/mariadb-cluster/templates/master-statefulset.yaml
+++ b/incubator/mariadb-cluster/templates/master-statefulset.yaml
@@ -1,5 +1,5 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: apps/v1beta1
+kind: StatefulSet
 metadata:
   name: {{ template "master.fullname" . }}
   labels:
@@ -9,7 +9,10 @@ metadata:
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
 spec:
+  serviceName: "{{ template "master.fullname" . }}"
   replicas: 1
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -143,14 +146,36 @@ spec:
 {{- end }}
       volumes:
       {{- if .Values.master.config }}
-      - name: config
-        configMap:
-          name: {{ template "master.fullname" . }}
+        - name: config
+          configMap:
+            name: {{ template "master.fullname" . }}
       {{- end }}
-      - name: data
-      {{- if .Values.master.persistence.enabled }}
-        persistentVolumeClaim:
-          claimName: {{ template "master.fullname" . }}-data
+{{- if .Values.master.persistence.enabled }}
+  volumeClaimTemplates:
+    - metadata:
+        name: data
+        labels:
+          app: "{{ template "name" . }}"
+          chart: {{ template "mariadb.chart" . }}
+          component: "master"
+          release: {{ .Release.Name | quote }}
+          heritage: {{ .Release.Service | quote }}
+      spec:
+        accessModes:
+        {{- range .Values.master.persistence.accessModes }}
+          - {{ . | quote }}
+        {{- end }}
+        resources:
+          requests:
+            storage: {{ .Values.master.persistence.size | quote }}
+      {{- if .Values.master.persistence.storageClass }}
+      {{- if (eq "-" .Values.master.persistence.storageClass) }}
+        storageClassName: ""
       {{- else }}
-        emptyDir: {}
-      {{- end -}}
+        storageClassName: {{ .Values.master.persistence.storageClass | quote }}
+      {{- end }}
+      {{- end }}
+{{- else }}
+        - name: "data"
+          emptyDir: {}
+{{- end }}
