--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -32,7 +32,7 @@ data:
   {{- else if (not .Values.replication.forcePassword) }}
   mariadb-replication-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- else }}
-  mariadb-password: {{ required "A MariaDB Replication Password is required!" .Values.replication.password }}
+  mariadb-replication-password: {{ required "A MariaDB Replication Password is required!" .Values.replication.password }}
   {{- end }}
   {{- end }}
 {{- end }}
