--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,14 +26,9 @@ jobs:
       - deploy:
           name: Publish charts
           command: |
-            case ${CIRCLE_BRANCH} in
-              "master" | "azure" )
-                curl -sL https://raw.githubusercontent.com/bitnami/test-infra/master/circle/helm-publish-charts.sh | bash -
-                ;;
-              * )
-                echo "Skipping chart publishing for ${CIRCLE_BRANCH} branch"
-                ;;
-            esac
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              curl -sL https://raw.githubusercontent.com/bitnami/test-infra/master/circle/helm-publish-charts.sh | bash -
+            fi
 
 workflows:
   version: 2
