--- a/bitnami/consul/values.yaml
+++ b/bitnami/consul/values.yaml
@@ -51,12 +51,6 @@ datacenterName: dc1
 ## Consul domain name.
 domain: consul
 
-## Consul address in which will bind client interfaces.
-clientAddress: '0.0.0.0'
-
-##Consul Serf lan address.
-serflanAddress: '0.0.0.0'
-
 ## Consul raft multiplier.
 raftMultiplier: '1'
 
@@ -105,57 +99,57 @@ maxUnavailable: 1
 ## no anti-affinity rules will be configured.
 antiAffinity: "soft"
 
-
 ## Create dedicated UI service
 ##
-uiService:
-  enabled: true
-  type: "ClusterIP"
+ui:
+  service:
+    enabled: true
+    type: "ClusterIP"
 
-## Configure the ingress resource that allows you to access the
-## Consul user interface. Set up the URL
-## ref: http://kubernetes.io/docs/user-guide/ingress/
-##
-uiIngress:
-  ## Set to true to enable ingress record generation
-  enabled: false
-
-  ## The list of hostnames to be covered with this ingress record.
-  ## Most likely this will be just one host, but in the event more hosts are needed, this is an array
-  hosts:
-  - name: consul-ui.local
-
-    ## Set this to true in order to enable TLS on the ingress record
-    ## A side effect of this will be that the backend wordpress service will be connected at port 443
-    tls: false
-
-    ## If TLS is set to true, you must declare what secret will store the key/certificate for TLS
-    tlsSecret: consul-ui.local-tls
-
-    ## Ingress annotations done as key:value pairs
-    ## If you're using kube-lego, you will want to add:
-    ## kubernetes.io/tls-acme: true
-    ##
-    ## For a full list of possible ingress annotations, please see
-    ## ref: https://github.com/kubernetes/ingress-nginx/blob/master/docs/annotations.md
-    ##
-    ## If tls is set to true, annotation ingress.kubernetes.io/secure-backends: "true" will automatically be set
-    annotations:
-    #  kubernetes.io/ingress.class: nginx
-    #  kubernetes.io/tls-acme: true
-  secrets:
-  ## If you're providing your own certificates, please use this to add the certificates as secrets
-  ## key and certificate should start with -----BEGIN CERTIFICATE----- or
-  ## -----BEGIN RSA PRIVATE KEY-----
+  ## Configure the ingress resource that allows you to access the
+  ## Consul user interface. Set up the URL
+  ## ref: http://kubernetes.io/docs/user-guide/ingress/
   ##
-  ## name should line up with a tlsSecret set further up
-  ## If you're using kube-lego, this is unneeded, as it will create the secret for you if it is not set
-  ##
-  ## It is also possible to create and manage the certificates outside of this helm chart
-  ## Please see README.md for more information
-  # - name: consul-ui.local-tls
-  #   key:
-  #   certificate:
+  ingress:
+    ## Set to true to enable ingress record generation
+    enabled: false
+  
+    ## The list of hostnames to be covered with this ingress record.
+    ## Most likely this will be just one host, but in the event more hosts are needed, this is an array
+    hosts:
+    - name: consul-ui.local
+  
+      ## Set this to true in order to enable TLS on the ingress record
+      ## A side effect of this will be that the backend wordpress service will be connected at port 443
+      tls: false
+  
+      ## If TLS is set to true, you must declare what secret will store the key/certificate for TLS
+      tlsSecret: consul-ui.local-tls
+  
+      ## Ingress annotations done as key:value pairs
+      ## If you're using kube-lego, you will want to add:
+      ## kubernetes.io/tls-acme: true
+      ##
+      ## For a full list of possible ingress annotations, please see
+      ## ref: https://github.com/kubernetes/ingress-nginx/blob/master/docs/annotations.md
+      ##
+      ## If tls is set to true, annotation ingress.kubernetes.io/secure-backends: "true" will automatically be set
+      annotations:
+      #  kubernetes.io/ingress.class: nginx
+      #  kubernetes.io/tls-acme: true
+    secrets:
+    ## If you're providing your own certificates, please use this to add the certificates as secrets
+    ## key and certificate should start with -----BEGIN CERTIFICATE----- or
+    ## -----BEGIN RSA PRIVATE KEY-----
+    ##
+    ## name should line up with a tlsSecret set further up
+    ## If you're using kube-lego, this is unneeded, as it will create the secret for you if it is not set
+    ##
+    ## It is also possible to create and manage the certificates outside of this helm chart
+    ## Please see README.md for more information
+    # - name: consul-ui.local-tls
+    #   key:
+    #   certificate:
 
 ## Consul configmap
 #configmap: | 
@@ -181,9 +175,11 @@ uiIngress:
 
 metrics:
   enabled: false
-  image: prom/consul-exporter
-  imageTag: v0.3.0
-  imagePullPolicy: IfNotPresent
+  image: 
+    registry: docker.io 
+    repository: prom/consul-exporter
+    tag: v0.3.0
+    pullPolicy: IfNotPresent
   resources: {}
   annotations: {}
 
@@ -194,6 +190,7 @@ nodeSelector: {"beta.kubernetes.io/arch": "amd64"}
 ## Configure extra options for liveness and readiness probes
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/#configure-probes)
 livenessProbe:
+  enabled: true
   initialDelaySeconds: 30
   periodSeconds: 10
   timeoutSeconds: 5
@@ -201,6 +198,7 @@ livenessProbe:
   successThreshold: 1
 
 readinessProbe:
+  enabled: true
   initialDelaySeconds: 5
   periodSeconds: 10
   timeoutSeconds: 5
