--- a/bitnami/node/values.yaml
+++ b/bitnami/node/values.yaml
@@ -42,7 +42,7 @@ applicationPort: 3000
 ## Kubernetes configuration
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
 ##
-serviceType: LoadBalancer
+serviceType: ClusterIP
 
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
@@ -75,6 +75,12 @@ mongodb:
   ## Whether to deploy a mongodb server to satisfy the applications database requirements.
   ## To use an external database set this to false and configure the externaldb parameters
   install: true # Check mongodb chart for configuration values
+  ## MongoDB custom user and database
+  ## ref: https://github.com/bitnami/bitnami-docker-mongodb/blob/master/README.md#creating-a-user-and-database-on-first-run
+  ##
+  mongodbUsername: user
+  mongodbDatabase: test_db
+  mongodbPassword: secret_password 
 
 ## Provision an external database (Only if mongodb.install is false)
 ## You can:
