[bitnami/mysql] update mysql chart version

--- a/bitnami/mysql/Chart.yaml
+++ b/bitnami/mysql/Chart.yaml
@@ -1,5 +1,6 @@
 name: mysql
-version: 0.1.13
+version: 0.1.14
+appVersion: 5.7.22
 description: MySQL is a fast, reliable, scalable, and easy to use open-source relational database system. MySQL Server is intended for mission-critical, heavy-load production systems as well as for embedding into mass-deployed software.
 keywords:
 - mysql
