README and variables improvements

--- a/bitnami/mysql/templates/secrets.yaml
+++ b/bitnami/mysql/templates/secrets.yaml
@@ -4,33 +4,33 @@ kind: Secret
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    app: "{{ template "name" . }}"
+    app: {{ template "name" . }}
     chart: {{ template "mysql.chart" . }}
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
 type: Opaque
 data:
   {{- if .Values.root.password }}
-  mysql-root-password: "{{ .Values.root.password | b64enc }}"
+  mysql-root-password: {{ .Values.root.password | b64enc | quote }}
   {{- else if (not .Values.root.forcePassword) }}
-  mysql-root-password: "{{ randAlphaNum 10 | b64enc }}"
+  mysql-root-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ else }}
   mysql-root-password: {{ required "A MySQL Root Password is required!" .Values.root.password }}
   {{- end }}
   {{- if .Values.db.user }}
   {{- if .Values.db.password }}
-  mysql-password: "{{ .Values.db.password | b64enc }}"
+  mysql-password: {{ .Values.db.password | b64enc | quote }}
   {{- else if (not .Values.db.forcePassword) }}
-  mysql-password: "{{ randAlphaNum 10 | b64enc }}"
+  mysql-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- else }}
   mysql-password: {{ required "A MySQL Database Password is required!" .Values.db.password }}
   {{- end }}
   {{- end }}
   {{- if .Values.replication.enabled }}
   {{- if .Values.replication.password }}
-  mysql-replication-password: "{{ .Values.replication.password | b64enc }}"
+  mysql-replication-password: {{ .Values.replication.password | b64enc | quote }}
   {{- else if (not .Values.replication.forcePassword) }}
-  mysql-replication-password: "{{ randAlphaNum 10 | b64enc }}"
+  mysql-replication-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- else }}
   mysql-replication-password: {{ required "A MySQL Replication Password is required!" .Values.replication.password }}
   {{- end }}
