--- a/bitnami/mean-prod/Chart.yaml
+++ b/bitnami/mean-prod/Chart.yaml
@@ -1,10 +1,13 @@
-name: node
-version: 2.0.1
-appVersion: 9.11.1
-description: Event-driven I/O server-side JavaScript environment based on V8
+name: mean
+version: 1.0.0
+appVersion: 3.6.4
+description: MEAN is a free and open-source JavaScript software stack for building dynamic web sites and web applications. The MEAN stack is MongoDB, Express.js, Angular, and Node.js. Because all components of the MEAN stack support programs written in JavaScript, MEAN applications can be written in one language for both server-side and client-side execution environments.
 keywords:
 - node
 - javascript
+- mongodb
+- express
+- angular
 - nodejs
 - git
 home: http://nodejs.org/
@@ -14,4 +17,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
-icon: https://bitnami.com/assets/stacks/nodejs/img/nodejs-stack-110x117.png
+icon: https://bitnami.com/assets/stacks/meanstack/img/meanstack-stack-220x234.png
