--- a/bitnami/mean/templates/deployment.yaml
+++ b/bitnami/mean/templates/deployment.yaml
@@ -1,67 +1,19 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "node.fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: {{ template "node.name" . }}
+    chart: {{ template "node.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   template:
     metadata:
       labels:
-        app: {{ template "fullname" . }}
-      annotations:
-        pod.beta.kubernetes.io/init-containers: '[
-          {
-            "name": "wait-for-db-service",
-            "image": "{{ .Values.image }}",
-            "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-            "command": ["/bin/bash", "-c", "for i in {1..100}; do if nc -z -w 1 {{ template "mongodb.fullname" . }} 27017; then exit 0; fi; done; exit 1;"]
-          },
-          {
-            "name": "git-clone-app",
-            "image": "{{ .Values.image }}",
-            "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-            "command": [ "/bin/sh", "-c" , "git clone {{ .Values.repository }} /app && git checkout {{ .Values.revision }}" ],
-            "volumeMounts": [
-              {
-                "name": "app",
-                "mountPath": "/app"
-              }
-            ]
-          },
-          {
-            "name": "npm-install",
-            "image": "{{ .Values.image }}",
-            "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-            "command": [ "/bin/sh", "-c" , "npm install" ],
-            "volumeMounts": [
-              {
-                "name": "app",
-                "mountPath": "/app"
-              }
-            ]
-          },
-          {
-            "name": "fixing-permissions",
-            "image": "{{ .Values.image }}",
-            "imagePullPolicy": "{{ .Values.imagePullPolicy }}",
-            "command": [ "/bin/sh", "-c" , "chown bitnami:bitnami -R /app /home/bitnami {{ .Values.persistence.path }}"],
-            "volumeMounts": [
-              {
-                "name": "app",
-                "mountPath": "/app"
-              },
-              {
-                "name": "data",
-                "mountPath": "{{ .Values.persistence.path }}"
-              }
-            ]
-          }
-        ]'
+        app: {{ template "node.name" . }}
+        release: {{ .Release.Name | quote }}
     spec:
       {{- if .Values.image.pullSecrets }}
       imagePullSecrets:
@@ -69,74 +21,118 @@ spec:
         - name: {{ . }}
       {{- end}}
       {{- end }}
+      initContainers:
+      - name: git-clone-repository
+        image: "{{ .Values.gitImage.registry }}/{{ .Values.gitImage.repository }}:{{ .Values.gitImage.tag }}"
+        imagePullPolicy: {{ .Values.gitImage.pullPolicy | quote }}
+        command: [ '/bin/sh', '-c' , 'git clone {{ .Values.repository }} /app && cd /app && git checkout {{ .Values.revision }}']
+        volumeMounts:
+        - name: app
+          mountPath: /app
+      - name: npm-install
+        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        workingDir: /app
+        command: ['/bin/bash', '-c', 'useradd bitnami && chown -R bitnami:bitnami /app && npm install']
+        volumeMounts:
+        - name: app
+          mountPath: /app
       containers:
-      - name: {{ template "fullname" . }}
-        securityContext:
-          readOnlyRootFilesystem: true
+      - name: {{ template "node.fullname" . }}
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         env:
-        - name: MONGODB_HOST
-          value: {{ template "mongodb.fullname" . }}
-        - name: MONGODB_PORT
+        {{- if .Values.mongodb.install }}
+        - name: DATABASE_HOST
+          value: {{ template "node.mongodb.fullname" . }}
+        - name: DATABASE_PORT
           value: "27017"
-        - name: MONGODB_ROOT_PASSWORD
+        - name: DATABASE_USER
+          value: {{ .Values.mongodb.mongodbUsername | quote }}
+        - name: DATABASE_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ template "mongodb.fullname" . }}
-              key: mongodb-root-password
-        - name: MONGODB_USERNAME
-          value: {{ default "" .Values.mongodb.mongodbUsername | quote }}
-        - name: MONGODB_PASSWORD
+              name: {{ template "node.mongodb.fullname" . }}
+              key: mongodb-password 
+        - name: DATABASE_NAME
+          value: {{ .Values.mongodb.mongodbDatabase | quote }}
+        - name: DATABASE_CONNECTION_OPTIONS
+          value: ""
+        {{ else }}
+        {{- $type := dict "type" .Values.externaldb.type }}
+        - name: DATABASE_HOST
           valueFrom:
             secretKeyRef:
-              name: {{ template "mongodb.fullname" . }}
-              key: mongodb-password
-        - name: MONGODB_DATABASE
-          value: {{ default "" .Values.mongodb.mongodbDatabase | quote }}
-        - name: GIT_REPO
-          value: {{ .Values.repository }}
-        command:
-        - /bin/bash
-        - -ec
-        - sudo -HEu bitnami npm start
+              name: {{ template "node.secretName" . }}
+              key: {{ template "externaldb.host" $type }} 
+        {{- if not .Values.externaldb.broker.serviceInstanceName }}
+        - name: DATABASE_NAME
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "node.secretName" . }}
+              key: database
+        {{ else }}
+        - name: DATABASE_NAME
+          value: ""
+        {{- end }}
+        - name: DATABASE_PORT
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "node.secretName" . }}
+              key: {{ template "externaldb.port" $type }} 
+        - name: DATABASE_USER
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "node.secretName" . }}
+              key: {{ template "externaldb.username" $type }} 
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ template "node.secretName" . }}
+              key: {{ template "externaldb.password" $type }} 
+        {{- if .Values.externaldb.ssl }}
+        - name: DATABASE_CONNECTION_OPTIONS
+          value: "ssl=true"
+        {{ else }}
+        - name: DATABASE_CONNECTION_OPTIONS
+          value: ""
+        {{- end }}
+        {{- end }}
+        - name: DATA_FOLDER
+          value: "/app"
+        workingDir: /app
+        command: ['/bin/bash', '-c', 'useradd bitnami && su bitnami -c "PATH=/opt/bitnami/node/bin:$PATH npm start"']
         ports:
         - name: http
-          containerPort: 8080
+          containerPort: {{ .Values.applicationPort }}
         livenessProbe:
           httpGet:
             path: /
             port: http
-          initialDelaySeconds: 180
+          initialDelaySeconds: 60
           timeoutSeconds: 5
           failureThreshold: 6
         readinessProbe:
           httpGet:
             path: /
             port: http
-          initialDelaySeconds: 30
+          initialDelaySeconds: 10
           timeoutSeconds: 3
           periodSeconds: 5
+        resources:
+{{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
         - name: app
           mountPath: /app
         - name: data
           mountPath: {{ .Values.persistence.path }}
-        - name: config
-          mountPath: /app/config
       volumes:
-        - name: app
-          emptyDir: {}
-        - name: data
-        {{- if .Values.persistence.enabled }}
-          persistentVolumeClaim:
-            claimName: {{ template "fullname" . }}
-        {{- else }}
-          emptyDir: {}
-        {{- end }}
-        - name: config
-          configMap:
-            name: {{ template "fullname" . }}
-            items:
-            - key: {{ .Values.configfile | quote }}
-              path: {{ .Values.configfile | quote }}
+      - name: app
+        emptyDir: {}
+      - name: data
+      {{- if .Values.persistence.enabled }}
+        persistentVolumeClaim:
+          claimName: {{ template "fullname" . }}
+      {{- else }}
+        emptyDir: {}
+      {{- end }}
