--- a/bitnami/mysql/templates/master-svc.yaml
+++ b/bitnami/mysql/templates/master-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "master.fullname" . }}
+  name: {{ template "fullname" . }}
   labels:
     app: "{{ template "name" . }}"
     component: "master"
