--- a/bitnami/mysql/templates/slave-statefulset.yaml
+++ b/bitnami/mysql/templates/slave-statefulset.yaml
@@ -72,7 +72,7 @@ spec:
         - name: MYSQL_REPLICATION_MODE
           value: "slave"
         - name: MYSQL_MASTER_HOST
-          value: {{ template "master.fullname" . }}
+          value: {{ template "fullname" . }}
         - name: MYSQL_MASTER_PORT
           value: "3306"
         - name: MYSQL_MASTER_USER
