--- a/bitnami/mean/templates/mongodb-binding.yaml
+++ b/bitnami/mean/templates/mongodb-binding.yaml
@@ -2,14 +2,14 @@
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceBinding
 metadata:
-  name: {{ template "node.mongodb.fullname" . }}-binding
+  name: {{ template "mean.mongodb.fullname" . }}-binding
   labels:
-    app: {{ template "node.name" . }}
-    chart: {{ template "node.chart" . }}
+    app: {{ template "mean.name" . }}
+    chart: {{ template "mean.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
   instanceRef:
     name: {{ .Values.externaldb.broker.serviceInstanceName }}
-  secretName: {{ template "node.secretName" . }}
+  secretName: {{ template "mean.secretName" . }}
 {{- end }}
