--- a/bitnami/mean/requirements.yaml
+++ b/bitnami/mean/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
 - name: mongodb
   repository: https://kubernetes-charts.storage.googleapis.com/
-  version: x.x.x
+  version: 2.x.x
   condition: mongodb.install
 - name: bitnami-common
   repository: https://charts.bitnami.com/bitnami
