Add javsalgar's feedback

--- a/bitnami/kafka/templates/jmx-configmap.yaml
+++ b/bitnami/kafka/templates/jmx-configmap.yaml
@@ -13,7 +13,7 @@ data:
 {{- if .Values.jmx.configMap.overrideConfig }}
 {{ toYaml .Values.jmx.configMap.overrideConfig | indent 4 }}
 {{- else }}
-    jmxUrl: service:jmx:rmi:///jndi/rmi://127.0.0.1:{{ .Values.jmx.port }}/jmxrmi
+    jmxUrl: service:jmx:rmi:///jndi/rmi://127.0.0.1:{{ .Values.metrics.jmx.jmxPort }}/jmxrmi
     lowercaseOutputName: true
     lowercaseOutputLabelNames: true
     ssl: false
