--- a/bitnami/kafka/templates/statefulset.yaml
+++ b/bitnami/kafka/templates/statefulset.yaml
@@ -211,10 +211,10 @@ spec:
         - -XshowSettings:vm
         - -jar
         - jmx_prometheus_httpserver.jar
-        - {{ .Values.metrics.jmx.port | quote }}
+        - {{ .Values.metrics.jmx.exporterPort | quote }}
         - /etc/jmx-kafka/jmx-kafka-prometheus.yml
         ports:
-        - containerPort: {{ .Values.metrics.jmx.port }}
+        - containerPort: {{ .Values.metrics.jmx.exporterPort }}
         resources:
 {{ toYaml .Values.metrics.jmx.resources | indent 10 }}
         volumeMounts:
