--- a/bitnami/kafka/templates/statefulset.yaml
+++ b/bitnami/kafka/templates/statefulset.yaml
@@ -225,8 +225,8 @@ spec:
       {{ if .Values.metrics.jmx.enabled }}
       - name: jmx-config
         configMap:
-          {{- if .Values.jmx.configMap.overrideName }}
-          name: {{ .Values.jmx.configMap.overrideName }}
+          {{- if .Values.metrics.jmx.configMap.overrideName }}
+          name: {{ .Values.metrics.jmx.configMap.overrideName }}
           {{- else }}
           name: {{ template "kafka.fullname" . }}-jmx-configuration
           {{- end }}
