--- a/bitnami/kafka/templates/svc-headless.yaml
+++ b/bitnami/kafka/templates/svc-headless.yaml
@@ -9,7 +9,7 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   type: ClusterIP
-  ClusterIP: None
+  clusterIP: None
   ports:
   - name: kafka
     port: 9092
