kafka: bump chart appVersion to `1.1.0-debian-9`

--- a/bitnami/kafka/Chart.yaml
+++ b/bitnami/kafka/Chart.yaml
@@ -1,6 +1,6 @@
 name: kafka
 version: 0.0.4
-appVersion: 1.1.0
+appVersion: 1.1.0-debian-9
 description: Apache Kafka is a distributed streaming platform.
 keywords:
 - kafka
